--- a/.github/Workflows/tests.yml
+++ b/.github/Workflows/tests.yml
@@ -22,6 +22,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Cache dependencies
+      uses: actions/cache@v3
+      with:
+        path: .build
+        key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
+        restore-keys: |
+          ${{ runner.os }}-spm-
+
     - name: Build
       run: swift build
 
